--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Relaxer</title>
-  </head>
-  <body>
-    <h1>Relaxer</h1>
 
-    <div class="container" id="container">
-      <div class="circle"></div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="style.css" />
+  <title>4 - 7 - 8 Breathe</title>
+</head>
 
-      <p id="text"></p>
+<body>
+  <h1>4 - 7 - 8 Breathe Technique</h1>
 
-      <div class="pointer-container">
-        <span class="pointer"></span>
-      </div>
+  <div class="container" id="container">
+    <div class="circle"></div>
 
-      <div class="gradient-circle"></div>
+    <p id="text"></p>
+
+    <div class="pointer-container">
+      <span class="pointer"></span>
     </div>
 
-    <script src="script.js"></script>
-  </body>
+    <div class="gradient-circle"></div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+
 </html>
