--- a/index.html
+++ b/index.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <title>4 - 7 - 8 Breathe</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="style.css" />
-  <title>4 - 7 - 8 Breathe</title>
-</head>
+  <body>
+    <h1>4 - 7 - 8 Breathing Technique</h1>
 
-<body>
-  <h1>4 - 7 - 8 Breathe Technique</h1>
+    <div class="container" id="container">
+      <div class="circle"></div>
 
-  <div class="container" id="container">
-    <div class="circle"></div>
+      <p id="text"></p>
 
-    <p id="text"></p>
+      <div class="pointer-container">
+        <span class="pointer"></span>
+      </div>
 
-    <div class="pointer-container">
-      <span class="pointer"></span>
+      <div class="gradient-circle"></div>
     </div>
 
-    <div class="gradient-circle"></div>
-  </div>
-
-  <script src="script.js"></script>
-</body>
-
+    <script src="script.js"></script>
+  </body>
 </html>
